--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,27 @@
 
+@import "reset.css";
+
+body{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: gainsboro;
+    padding: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.btns{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 canvas{
     width: 800px;
     height: 800px;
-    border: 5px solid black;
+    background-color: #fff;
+    border-radius: 10px;
 }
 
 body{
@@ -11,8 +30,54 @@ body{
     align-items: center;
 }
 
+.color-options{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
 .color-option{
     width: 50px;
     height: 50px;
+    border-radius: 50px;
     cursor: pointer;
+    border: 5px solid white;
+    transition: transform ease-in-out .3s;
+}
+
+.color-option:hover{
+    transform: scale(1.2);
+}
+input#color{
+    background-color: #fff;
+}
+
+button,label{
+    all:unset;
+    padding: 10px 0px;
+    text-align: center;
+    background-color: royalblue;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: opacity linear .1s;
+}
+button:hover{
+    opacity: 0.8;
+}
+
+input#file{
+    display: none;
+}
+
+
+input#text{
+    all:unset;
+    padding: 10px 0px;
+    border-radius: 10px;
+    font-weight: 500;
+    text-align: center;
+    background-color: #fff;
 }
