--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,103 @@
-
 @import "reset.css";
 
-body{
-    display: flex;
-    gap: 20px;
-    justify-content: space-between;
-    align-items: flex-start;
-    background-color: gainsboro;
-    padding: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body {
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: gainsboro;
+  padding: 80px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.btns{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+#leftContainer {
+  display: block;
 }
 
-canvas{
-    width: 800px;
-    height: 800px;
-    background-color: #fff;
-    border-radius: 10px;
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btns2 {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
-.color-options{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
+canvas {
+  width: 600px;
+  height: 600px;
+  background-color: #fff;
+  border-radius: 10px;
 }
 
-.color-option{
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    cursor: pointer;
-    border: 5px solid white;
-    transition: transform ease-in-out .3s;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.color-option:hover{
-    transform: scale(1.2);
-}
-input#color{
-    background-color: #fff;
-}
-
-button,label{
-    all:unset;
-    padding: 10px 0px;
-    text-align: center;
-    background-color: royalblue;
-    color: #fff;
-    font-weight: 500;
-    cursor: pointer;
-    border-radius: 10px;
-    transition: opacity linear .1s;
-}
-button:hover{
-    opacity: 0.8;
+.color-options {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  align-items: center;
 }
 
-input#file{
-    display: none;
+.color-option {
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  cursor: pointer;
+  border: 5px solid white;
+  transition: transform ease-in-out 0.3s;
 }
 
+.color-option:hover {
+  transform: scale(1.2);
+}
+input#color {
+  background-color: #fff;
+}
 
-input#text{
-    all:unset;
-    padding: 10px 0px;
-    border-radius: 10px;
-    font-weight: 500;
-    text-align: center;
-    background-color: #fff;
+button,
+label {
+  all: unset;
+  padding: 10px 0px;
+  text-align: center;
+  background-color: royalblue;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: opacity linear 0.1s;
+}
+.btns2 button {
+  width: 65px;
+}
+button:hover {
+  opacity: 0.8;
+}
+
+input#file {
+  display: none;
+}
+
+input#text {
+  all: unset;
+  padding: 10px 0px;
+  border-radius: 10px;
+  font-weight: 500;
+  text-align: center;
+  background-color: #fff;
+}
+
+.border {
+  border: groove #fff 5px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: #ffffff3d;
 }
