--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 body {
   display: flex;
+  color: rgb(116, 138, 164);
   gap: 40px;
   justify-content: space-between;
   align-items: flex-start;
@@ -9,6 +10,12 @@ body {
   padding: 80px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+legend {
+  font-size: 17px;
+  padding: 0 7px;
+  font-weight: 500;
 }
 
 #leftContainer {
@@ -41,6 +48,7 @@ body {
 }
 
 .color-options {
+  margin-bottom: 20px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
@@ -68,7 +76,7 @@ label {
   all: unset;
   padding: 10px 0px;
   text-align: center;
-  background-color: royalblue;
+  background-color: rgb(116, 138, 164);
   color: #fff;
   font-weight: 500;
   cursor: pointer;
@@ -100,4 +108,7 @@ input#text {
   padding: 10px 20px;
   border-radius: 10px;
   background-color: #ffffff3d;
+}
+#line-width {
+  accent-color: rgb(116, 138, 164);
 }
