--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,13 @@ body {
   justify-content: space-between;
   align-items: flex-start;
   background-color: gainsboro;
-  padding: 80px;
+  padding: 45px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#logo {
+  width: 300px;
 }
 
 legend {
@@ -39,6 +43,7 @@ canvas {
   height: 600px;
   background-color: #fff;
   border-radius: 10px;
+  margin-top: 30px;
 }
 
 body {
