--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,22 @@
 @import "reset.css";
 
+:root {
+  --titlecolor: #748aa4;
+  --subcolor: #ddebe9;
+  --activeBtnColor: #3e8880;
+}
+
+.activeBtn {
+  background-color: var(--activeBtnColor);
+}
+
 body {
   display: flex;
-  color: rgb(116, 138, 164);
+  color: var(--titlecolor);
   gap: 40px;
   justify-content: space-between;
   align-items: flex-start;
-  background-color: gainsboro;
+  background-color: var(--subcolor);
   padding: 45px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -69,11 +79,18 @@ body {
   transition: transform ease-in-out 0.3s;
 }
 
-.color-option:hover {
+.color-option:hover,
+input#color:hover {
   transform: scale(1.2);
 }
 input#color {
   background-color: #fff;
+  border: none;
+  transition: transform ease-in-out 0.3s;
+}
+
+input#color::-webkit-color-swatch {
+  border: none;
 }
 
 button,
@@ -81,7 +98,7 @@ label {
   all: unset;
   padding: 10px 0px;
   text-align: center;
-  background-color: rgb(116, 138, 164);
+  background-color: var(--titlecolor);
   color: #fff;
   font-weight: 500;
   cursor: pointer;
@@ -91,8 +108,11 @@ label {
 .btns2 button {
   width: 65px;
 }
+
+label:hover,
 button:hover {
-  opacity: 0.8;
+  background-color: var(--activeBtnColor);
+  transition: all 1.5s;
 }
 
 input#file {
